--- a/index.html
+++ b/index.html
@@ -648,6 +648,9 @@
             <p>Copyright &copy; All Rights Reserved</p>
             <img src="./assets/img/payment.png" alt="payment">
         </div>
+              <button class="go-up">
+                <i class="fa fa-arrow-circle-up"></i>
+            </button>
     </footer>
 
 
