--- a/index.html
+++ b/index.html
@@ -262,6 +262,11 @@
             <a href="#category" class="btn btn-women">Women</a>
             <a href="#category" class="btn btn-kids">Kids</a>
         </div>
+        <!-- Loader -->
+         <div id="loading">
+                <img src="./assets/img/loading.gif" alt="">
+              </div>
+        
         <div class="category-products">
             <div class="product men">
                 <div class="produt-img">
